--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">PictureOfTheDay</string>
+    <string name="search_in_wiki">Search in Wiki</string>
+
+
+    <string name="photo_of_the_day_stub">Photo of the day</string>
+    <string name="wiki_helper_text">Find information in Wikipedia.</string>
+    <string name="favourite">favourite</string>
+    <string name="settings">settings</string>
+    <string name="search">Search</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
 </resources>
