--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="content_description_icon_text">content description start icon</string>
     <string name="title_text">Two Clusters and a Comet</string>
     <string name="explanation_text">This lovely starfield spans some four full moons.</string>
+    <string name="on_screen_1">On screen 1</string>
+    <string name="on_screen_2">On screen 2</string>
 
 
 </resources>
