--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
 
     <string name="photo_of_the_day_stub">Photo of the day</string>
     <string name="wiki_helper_text">Find information in Wikipedia.</string>
-    <string name="favourite">favourite</string>
+    <string name="favorite">favorite</string>
     <string name="settings">settings</string>
     <string name="search">Search</string>
     <!-- TODO: Remove or change this placeholder text -->
@@ -18,6 +18,7 @@
     <string name="today">Today</string>
     <string name="yesterday">Yesterday</string>
     <string name="pozavchera">Pozavchera</string>
+    <string name="full_hd">Full-HD</string>
 
 
 </resources>
